Criado o estilo do meu curriculo

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang = "pt-br">
 <head>
+    <title>Currículo</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Currículo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head> 
 <body>
-    <h2>Curriculo:  Daniel Vítor Oliveira Nascimento</h2>   
+    <h1 >Daniel Vítor Oliveira Nascimento</h1>   
     <hr>
     <h2>Dados pessoais:</h2>
     <p><b>Endereço: </b> Rua dos bobos nº 0</p>
